--- a/index.html
+++ b/index.html
@@ -15,13 +15,14 @@
 		<div class="container">
     		<div class="blurb">
         		<h1>Hi there, I'm Jyotish Saikia!</h1>
-				<p>I'm best known as the horrible cop from <em>A Touch of Evil</em> Don't trust me. <a href="/about">Read more about my life...</a></p>
+				<p></p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
     		<ul>
-        		<li><a href="mailto:hankquinlanhub@gmail.com">email</a></li>
-        		<li><a href="https://github.com/hankquinlan">github.com/hankquinlan</a></li>
+        		<li><a href="mailto:jaikia44@gmail.com">Gmail</a></li>
+        		<li><a href="https://github.com/jsaikia44">Github</a></li>
+			<li><a href="https://linkedin.com/in/jyotish-saikia/">Likedin</a></li>
 			</ul>
 		</footer>
 	</body>
