--- a/proj.html
+++ b/proj.html
@@ -56,8 +56,8 @@
                         <p>page under construction</p>
                         
                         <p>
-                            github link of of project
-                            <a href="http://spaceipsum.com/">link</a>
+                            github link 
+                            <a href="http://github.com/jsaikia44">link</a>
                         </p>
             </div>
         </article>
