--- a/index.html
+++ b/index.html
@@ -51,6 +51,9 @@
         <div class="container mt-5">
             <div class="row">
                 <div class="col-sm-4">
+                    <div class="icon">
+   				        <i class="icon-phone"></i>
+   			        </div>
                     <h3>Column 1</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
                     <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
