--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <div class="container mt-5">
             <div class="row">
                 <div class="col-sm-4">
-                    <i style="font-size:24px" class="fa">&#xf095;</i>
+                    <i class="fa fa-phone" style="font-size:36px"></i>
                     <h3>Column 1</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
                     <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
