--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
             <div class="row">
                 <div class="col-sm-4">
                     <i class="fa fa-phone" style="font-size:36px"></i>
-                    <h3>Column 1</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
+                    <h3>Call me at</h3>
+                    <p>+91-8876952444</p>
                     <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
                 </div>
                 <div class="col-sm-4">
