--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <div class="container mt-5">
             <div class="row">
                 <div class="col-sm-4">
-                    <i class="fa fa-phone" style="font-size:36px"></i>
+                    <i class="fa fa-phone" style="font-size:36px; float: center"></i>
                     <h3>Call me at</h3>
                     <p>+91-8876952444</p>
                     <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
