--- a/index.html
+++ b/index.html
@@ -52,10 +52,10 @@
         <div class="container mt-5">
             <div class="row">
                 <div class="col-sm-4">
-                    <i class="fa fa-phone" style="font-size:20px; float: center"></i>
+                    <i class="fa fa-phone" style="font-size:20px; "></i>
                     <h3>Call me at</h3>
-                    <p>+91-8876952444</p>
-                    <p>+91-9434793042</p>
+                    <p>+91-8876952444
+                    <br>+91-9434793042</p>
                 </div>
                 <div class="col-sm-4">
                     <h3>Column 2</h3>
