--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <div class="container mt-5">
             <div class="row">
                 <div class="col-sm-4">
-                    <i class="fa fa-phone" style="font-size:20px; "></i>
+                    <i class='fas fa-map-marker-alt' style='font-size:24px'></i>
                     <h3>Call me at</h3>
                     <p>+91-8876952444
                     <br>+91-9434793042</p>
