--- a/index.html
+++ b/index.html
@@ -81,8 +81,7 @@
                             <li class="list-inline-item">
                                 <a href="https://www.linkedin.com/in/jyotish-saikia/">
                                     <span class="fa-stack fa-lg">
-                                        <i class="fas fa-circle fa-stack-2x"></i>
-                                        <i class="fab fa-linkedin fa-stack-1x fa-inverse"></i>
+                                        <i class="icon-linkedin"></i> icon-linkedin
                                     </span>
                                 </a>
                                 <a href="https://twitter.com/saikia21">
