--- a/index.html
+++ b/index.html
@@ -85,9 +85,9 @@
                                     </span>
                                 </a>
                                 <a href="https://twitter.com/saikia21">
-                                    <span class="fa-stack fa-lg">
-                                        <i class="fas fa-circle fa-stack-2x"></i>
-                                        <i class="fab fa-twitter fa-stack-1x fa-inverse"></i>
+                                    <span class="fa-stack">
+                                        <i class="fas fa-circle fa-stack"></i>
+                                        
                                     </span>
                                 </a>
                             </li>
