--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                                 </a>
                                 <a href="https://twitter.com/saikia21">
                                     <span class="fa-stack">
-                                        <i class="fas fa-circle fa-stack"></i>
+                                        <i class="fas fa-circle fa-stack-1x"></i>
                                         
                                     </span>
                                 </a>
