--- a/resume.html
+++ b/resume.html
@@ -49,8 +49,8 @@
         </header>
         <!-- Main Content-->
         <div class="subheading1" style="text-align: center;">
-            <p>Download my resume from below</p>
-            <p><a href="assets/Jyotish_Saikia_Resume.pdf" download="jyotish_resume"><button class="btn"  download="jyotish_resume"><i class="fa fa-download"></i> Download</button></a></p>
+            <p>Downloads</p>
+            <p>Resume <a href="assets/Jyotish_Saikia_Resume.pdf" download="jyotish_resume"><button class="btn"  download="jyotish_resume"><i class="fa fa-download"></i> Download</button></a></p>
         </div>
 
         
