--- a/resume.html
+++ b/resume.html
@@ -50,7 +50,7 @@
         <!-- Main Content-->
         <div class="subheading1" style="text-align: center;">
             <p>Downloads</p>
-            <p>Resume <a href="assets/Jyotish_Saikia_Resume.pdf" download="jyotish_resume"><button class="btn"  download="jyotish_resume"><i class="fa fa-download"></i> Download</button></a></p>
+            <p>Resume <a href="assets/Jyotish_Saikia_Resume.pdf" download="jyotish_resume"><button class="btn"  download="jyotish_resume"><i class="fa fa-download"></i> Downlad</button></a></p>
         </div>
 
         
