--- a/about.html
+++ b/about.html
@@ -50,6 +50,9 @@
         <main class="mb-4">
             <div class="container px-4 px-lg-5">
                         <p>Hello guys, currently I am staying in durgapur, West Bengal, working in the Computer and information technology(C &IT) department in Durgapur steel plant, SAIL.</p>
+                        <p><b>Experiences: </b></p>
+                        1. 2.5 years of experience as an assistant manager
+                        2. 4 months as data science intern
                         <p><b>Educational Background: </b></p>
                         B.Tech in ELectronics and instrumentation from NIT Silchar and 
                         Masters in data science from IIT Guwahati.
